<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uppgift 1</string>
    <string name="title_activity_main">Uppgift 1</string>
    <string name="title_section1">Stopwatch</string>
    <string name="title_section2">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="stopwatch_default_label">hh:mm:ss</string>
    <string name="default_stopwatch_value">00:00:00</string>
    <string name="varv_label">Varv: %d</string>
    <string name="lap_time_label">Tid: %s</string>
    <string name="timer_notifications_title">Timer</string>
    <string name="notification_default_stopwatch_label">STOPWATCH!!!!!</string>
    <string name="stopwatch_notification_title">Stopwatch</string>
    <string name="notification_stopwatch_text">Tid: %s</string>
    <string name="stop_title_button">Stopp</string>
    <string name="start_title_button">Start</string>
    <string name="reset_title_button">Nollställ</string>
    <string name="lap_title_button">Varv</string>
    <string name="notification_timer_title">Timer</string>
    <string name="notification_timer_text">Tid %s</string>
    <string name="timer_text_value">%d sec</string>
    <string name="timer_text_default">30 sec</string>
    <string name="alarm_text">ALARM!!!!</string>
    <string name="alarm_stop_text">Stoppa Alarm</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="to_alarm_stop_text">Stäng av larmet</string>
    <string name="timer_finnished_text">Timer Klar!</string>

</resources>
